# ateniaengine

./: .gitignore  Cargo.toml  Dockerfile  INVESTIGATION_M6.md  INVESTIGATION_M6_DEEP.md  INVESTIGATION_M6_REPLAN.md  README.md  ROADMAP.md  build.rs  monitor_hw.ps1
.github/workflows/: ci.yml  release.yml
config/adapters/: gemma.yaml  llama.yaml  mistral.yaml  phi.yaml  qwen.yaml
docs/: ADAPTER_TOOLKIT_V2.md  APX.md  AQS_ARCHITECTURE_AUDIT.md  AQS_OVERVIEW.md  ARCHITECTURE_REACTION_STRATEGIES.md  ATENIA_RESOLUTION_PLAN.md  CERTIFICATION.md  CERTIFY_BREADTH_EXECUTION_PLAN.md  CLI.md  DEEPSEEK_V2_LITE_DATA_READY.md  DEEPSEEK_V2_LITE_FEASIBILITY.md  DEEPSEEK_V2_LITE_PROVISIONED.md  DEEPSEEK_V3_GAP_AUDIT.md  FAMILY_COVERAGE_AUDIT.md  HANDOFF_APX_V20_M10_TO_PHASE16.md  HANDOFF_APX_V20_M11_D_5.md  HANDOFF_APX_V20_M3.md  HANDOFF_APX_V20_M4.5.md  HANDOFF_APX_V20_M4.6.md  HANDOFF_APX_V20_M4.7.md  HANDOFF_APX_V20_M4.8.md  HANDOFF_APX_V20_M4.9.md  HANDOFF_APX_V20_M4.md  HANDOFF_APX_V20_M5.md  HANDOFF_APX_V20_M6.md  HANDOFF_APX_V20_M7.md  HANDOFF_APX_V20_M8.6.md  HANDOFF_APX_V20_M8.7.md  HANDOFF_APX_V20_M8.md  HANDOFF_APX_V20_M9.md  HANDOFF_AQS_1.md  HANDOFF_AQS_10.md  HANDOFF_AQS_2.md  HANDOFF_AQS_3.md  HANDOFF_AQS_4.md  HANDOFF_AQS_5.md  HANDOFF_AQS_6.md  HANDOFF_AQS_7.md  HANDOFF_AQS_8.md  HANDOFF_AQS_9.md  (+113 more)
docs/decisions/: ADR-001-numerical-health-monitor-deferred.md  ADR-002-mathematical-ground-truth-validation.md  ADR-003-methodology-questioning-framework.md  ADR-004-f64-reference-as-default.md  ADR-005-fast-mode-bf16-tc-envelope.md  ADR-006-adapter-toolkit-family-tensor-spec.md  ADR-007-moe-certification-ladder.md  README.md
docs/numcert/: deepseek-v2-lite.moecert.json  falcon3-7b-instruct.numcert.json  gemma-2-2b-instruct.numcert.json  gemma-3-1b-it.numcert.json  mistral-7b-v0.3.numcert.json  mixtral-8x7b-v0.1.moecert.json  phi-3.5-mini-instruct.numcert.json  qwen1.5-moe-a2.7b.moecert.json  smollm2-1.7b-instruct.numcert.json  tinyllama-1.1b.numcert.json
examples/: bench_cublas_bf16.rs  bench_cuda_matmul.rs  bench_decode.rs  bench_disk_gpu_pipeline.rs  bench_disk_weight.rs  bench_int8_w8a16.rs  bench_matmul.rs  demo_basic.rs  demo_mini_flux.rs  demo_mini_flux_training.rs  demo_mini_transformer.rs  demo_training.rs  llama2_13b_demo.rs  test_bf16_upload.rs  test_gpu_dispatch.rs
fixtures/moe/: convert_mixtral_classic.py  deepseek_block.json  deepseek_block.safetensors  deepseek_full.json  deepseek_full.safetensors  deepseek_full_config.json  deepseek_scale.json  deepseek_scale.safetensors  deepseek_scale_config.json  deepseek_v2lite_c5_diag.json  deepseek_v2lite_c5_diag.safetensors  deepseek_v2lite_c5_ref.json  deepseek_v2lite_c5_ref.safetensors  deepseek_v2lite_decomp_ref.json  deepseek_v2lite_mla0.json  deepseek_v2lite_mla0.safetensors  deepseek_v2lite_mla0_config.json  diag_mscale_probe.py  full_mixtral.json  full_mixtral.safetensors  full_mixtral_gen.json  generate_decode_reference.py  generate_deepseek_block_reference.py  generate_deepseek_full_reference.py  generate_deepseek_v2lite_c5_reference.py  generate_deepseek_v2lite_decomposition_reference.py  generate_deepseek_v2lite_mla0_reference.py  generate_full_forward_reference.py  generate_gqa_reference.py  generate_mixtral_c5_reference.py  generate_mixtral_decomposition_reference.py  generate_qwen_moe_c5_reference.py  generate_qwen_moe_decomposition_reference.py  generate_qwen_moe_reference.py  generate_reference.py  generate_scale_references.py  generate_v3_route_reference.py  gqa_mixtral.json  gqa_mixtral.safetensors  gqa_mixtral_config.json  (+32 more)
models/Llama-3.2-1B-Instruct-Q4_K_M-GGUF/: model.numcert.json
models/SmolLM2-1.7B-Instruct-GGUF/: model.numcert.json
models/TinyLlama-1.1B-Chat-v1.0-Q4_K_M-GGUF/: model.numcert.json
models/gemma-2-2b-it/: model.numcert.json
models/llama-3.1-8b-instruct/: model.numcert.json
models/llama-3.2-1b-instruct/: model.numcert.json
models/llama-3.2-3b-instruct/: model.numcert.json
models/phi-3.5-mini-instruct/: model.numcert.json
models/qwen2.5-1.5b-instruct/: model.numcert.json
models/smollm2-1.7b-instruct/: model.numcert.json
models/tinyllama-1.1b/: model.numcert.json
models/tinyllama-q8_0/: model.numcert.json
paper/: README.MD
scripts/: dl_falcon.py  dl_gemma_family.py  dl_llama_quants.py  dl_mistral.py  dl_phi.py  dl_qwen_family.py  dl_smollm.py  rtx3090_battery.ps1  rtx3090_battery.sh
src/: apx6_6_auto_tiling.rs  cli_generate.rs  cli_run.rs  cpu_features.rs  diag.rs  lib.rs  matmul_dispatcher.rs
src/adapter_toolkit/: dsl.rs  generator.rs  inspect.rs  introspect.rs  mod.rs  moe_family_spec.rs  moe_resolver.rs  moe_spec.rs  registry.rs  spec.rs  validate.rs
src/age/: chunking.rs  executor.rs  fusion.rs  mod.rs
src/amg/: bench_trace.rs  builder.rs  chunking.rs  fusions.rs  grad_store.rs  graph.rs  kv_cache.rs  mod.rs  nodes.rs  normalizer.rs  parser.rs  reactive.rs  scheduler.rs  weight_store.rs
src/amm/: mod.rs  (+15 more)
tests/: README.md  adaptive_guards_test.rs  amg_conv2d_gradient_check_test.rs  amg_conv2d_known_values_test.rs  amg_conv2d_vs_v17_test.rs  amg_maxpool2d_gradient_check_test.rs  amg_maxpool2d_known_values_test.rs  amg_maxpool2d_vs_v17_test.rs  amg_nn_integration_test.rs  amg_signalbus_abort_test.rs  amg_signalbus_no_abort_test.rs  amg_test.rs  amm_batch_manager_test.rs  amm_forecaster_test.rs  amm_forecaster_vram_integration_test.rs  apx13_scaffold_test.rs  apx14_decision_reasoning_test.rs  apx14_execution_timeline.rs  apx14_failure_trace_test.rs  apx14_memory_pressure_test.rs  apx_11_0_backward_ir.rs  apx_11_10_fused_attention_real.rs  apx_11_1_linear_backward.rs  apx_11_2_matmul_backward.rs  apx_11_3_attention_backward.rs  apx_11_4_fusion_test.rs  apx_11_5_tensor_gpu_roundtrip.rs  apx_11_6_tensor_bridge_api.rs  apx_11_7_matmul_backward_real.rs  apx_11_8_linear_backward_real.rs  apx_11_9_attention_backward_real.rs  apx_12_0_kernel_normalization.rs  apx_12_10_heatmap.rs  apx_12_11_perf_buckets.rs  apx_12_12_consistency.rs  apx_12_13_stability_map.rs  apx_12_1_autoplanner.rs  apx_12_2_5_compat_layer.rs  apx_12_2_profiler.rs  apx_12_3_autotuner.rs  (+422 more)
(+617 files in other folders)
