[package]
name = "atenia-engine"
version = "0.1.0"
edition = "2024"
authors = ["Guillermo Alonso Albella"]
description = "Hardware-adaptive execution intelligence runtime for AI, in Rust."
license = "Apache-2.0"
repository = "https://github.com/AteniaEngine/ateniaengine"
homepage = "https://ateniaengine.com"
readme = "README.md"
keywords = ["runtime", "execution", "ai", "rust", "adaptive"]
categories = ["science", "algorithms", "simulation"]

[features]
# Hardware-probe binary: cross-vendor GPU enumeration via wgpu, with
# optional NVIDIA augmentation via NVML. Gated behind a feature so the
# wgpu transitive-dep footprint (~50 crates, heavy first build) does
# not land on regular library builds. Enable with:
#     cargo build --release --bin hardware_probe --features hw-probe
hw-probe = [
    "dep:wgpu",
    "dep:nvml-wrapper",
    "dep:serde",
    "dep:os_info",
]

[dependencies]
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
rayon = "1.11"
ctor = "0.2"
num_cpus = "1.16"
once_cell = "1.19"
crossbeam-deque = "0.8"
sysinfo = "0.30"
libloading = "0.8"
safetensors = "0.4"
half = "2"

# M4.8.e — vendor-agnostic cache-blocked SIMD matmul.
# Pure-Rust BLIS-style sgemm with AVX2/FMA + NEON paths and
# runtime ISA dispatch (no MKL, no C toolchain, AMD-friendly,
# ARM-ready). The dispatcher routes shapes large enough to
# benefit from cache blocking through `matrixmultiply::sgemm`;
# small shapes stay on the existing handcoded kernels because
# the matrixmultiply packing overhead dominates them. Runtime
# parallelism for column partitioning lives in
# `matmul_dispatcher.rs` (rayon, M4.8.d), keeping
# matrixmultiply on its default single-threaded build.
matrixmultiply = "0.3"

# M4.9.a — derive-based CLI parsing for the public `atenia`
# binary. Single dependency, MIT/Apache, ~150 KB binary impact.
# `derive` feature is the canonical idiomatic surface; it
# auto-generates --help text + validation from the struct
# definitions in `src/bin/atenia.rs` so the spec lives in one
# place. No async runtime / no I/O traits — clap is a parser,
# not a framework.
clap = { version = "4", features = ["derive", "env"] }

# serde_json is used by both the TinyLlama config loader (M4.5-b1)
# and the hw-probe binary, so it stays as a regular runtime dep
# rather than being feature-gated.
serde_json = "1"

# Optional deps, only pulled in with `--features hw-probe`.
wgpu = { version = "22", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
os_info = { version = "3", optional = true }

[[bin]]
name = "hardware_probe"
path = "src/bin/hardware_probe.rs"
required-features = ["hw-probe"]

# M4.9.a — public single-binary CLI. Subcommands:
#   atenia probe       (requires --features hw-probe at compile)
#   atenia run         (the tri-mode killer-demo runner)
# Default-build users get `atenia run`; pulling `--features
# hw-probe` adds the cross-vendor GPU enumerator. The probe
# arm is gated at runtime via `cfg!(feature = "hw-probe")`
# rather than `required-features` so the single binary stays
# installable from a default `cargo install --path .` even on
# hosts that cannot build wgpu.
[[bin]]
name = "atenia"
path = "src/bin/atenia.rs"

[dev-dependencies]
# (serde_json now lives in [dependencies], available transitively
# to integration tests as well — kept here as a no-op marker.)
