[package]
name = "atenia-engine"
version = "0.1.0"
edition = "2024"
authors = ["Guillermo Alonso Albella"]
description = "Hardware-adaptive execution intelligence runtime for AI, in Rust."
license = "Apache-2.0"
repository = "https://github.com/AteniaEngine/ateniaengine"
homepage = "https://ateniaengine.com"
readme = "README.md"
keywords = ["runtime", "execution", "ai", "rust", "adaptive"]
categories = ["science", "algorithms", "simulation"]

[features]
# Default features: M4.9.b. The `demo` feature ships the
# `atenia_engine::demo` module that the `atenia run` CLI
# subcommand and the `tests/m4_7_6_e_*` integration tests
# share. Default-on so:
#   - `cargo test --test m4_7_6_e_llama2_13b_modes_b_c_test`
#     keeps working with no extra flags.
#   - `cargo build --release --bin atenia` produces a binary
#     where `atenia run` is wired to the demo module.
# Power users wanting the minimal library surface disable
# via `--no-default-features`.
default = ["demo"]

# Demo reproduction-surface module: pressure probes, reactive-
# context factory, sharded BF16 load helper, argmax reduction.
# All primitives are existing engine code surfaced behind a
# stable public API at `atenia_engine::demo`. Adds no extra
# dependencies — the feature gates a module, not a dep tree.
demo = []

# Hardware-probe binary: cross-vendor GPU enumeration via wgpu, with
# optional NVIDIA augmentation via NVML. Gated behind a feature so the
# wgpu transitive-dep footprint (~50 crates, heavy first build) does
# not land on regular library builds. Enable with:
#     cargo build --release --bin hardware_probe --features hw-probe
hw-probe = [
    "dep:wgpu",
    "dep:nvml-wrapper",
    "dep:os_info",
]

# M6 diagnostic — verbose stderr tracing of every gate and sub-path
# inside the GPU MatMul dispatch surface (`gpu/dispatch/hooks.rs`,
# `cuda/matmul.rs::cuda_matmul_non_pooled`, and the `MatMul` arm of
# `amg/graph.rs`). Default-off so production builds pay zero overhead.
# Enable with:
#     cargo run --release --features gpu-trace --bin atenia ...
# The trace lines are prefixed `[GPU-TRACE]` so they can be `findstr`-
# filtered out of the rest of the binary's output.
gpu-trace = []

[dependencies]
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
rayon = "1.11"
ctor = "0.2"
num_cpus = "1.16"
once_cell = "1.19"
crossbeam-deque = "0.8"
sysinfo = "0.30"
libloading = "0.8"
safetensors = "0.4"
half = "2"

# STREAMING-LOADER-1 — memory-map single-file / per-shard safetensors at load
# instead of reading the whole file into a heap `Vec<u8>`. memmap2 is pure-Rust,
# no C toolchain, cross-platform (Windows + Linux), MIT/Apache — preserves the
# vendor-agnostic posture. The mapped, read-only file pages are file-backed and
# reclaimable, so peak *committed* RAM during load drops by ~the file size. A
# graceful `fs::read` fallback (and `ATENIA_DISABLE_MMAP=1`) keep the old path.
memmap2 = "0.9"

# M4.8.e — vendor-agnostic cache-blocked SIMD matmul.
# Pure-Rust BLIS-style sgemm with AVX2/FMA + NEON paths and
# runtime ISA dispatch (no MKL, no C toolchain, AMD-friendly,
# ARM-ready). The dispatcher routes shapes large enough to
# benefit from cache blocking through `matrixmultiply::sgemm`;
# small shapes stay on the existing handcoded kernels because
# the matrixmultiply packing overhead dominates them. Runtime
# parallelism for column partitioning lives in
# `matmul_dispatcher.rs` (rayon, M4.8.d), keeping
# matrixmultiply on its default single-threaded build.
matrixmultiply = "0.3"

# M4.9.a — derive-based CLI parsing for the public `atenia`
# binary. Single dependency, MIT/Apache, ~150 KB binary impact.
# `derive` feature is the canonical idiomatic surface; it
# auto-generates --help text + validation from the struct
# definitions in `src/bin/atenia.rs` so the spec lives in one
# place. No async runtime / no I/O traits — clap is a parser,
# not a framework.
clap = { version = "4", features = ["derive", "env"] }

# serde_json is used by both the TinyLlama config loader (M4.5-b1)
# and the hw-probe binary, so it stays as a regular runtime dep
# rather than being feature-gated.
serde_json = "1"

# Adapter Toolkit v2 — declarative adapter DSL. The toolkit accepts
# both `.yaml` and `.json` adapter specs; `serde_yaml` parses the
# YAML form into the same serde schema serde_json already handles.
# Pure-Rust, no C toolchain — preserves the vendor-agnostic posture.
#
# TECHNICAL DEBT — serde_yaml 0.9 is deprecated upstream (the crate
# is unmaintained; the published version is literally tagged
# `0.9.34+deprecated`). It still builds, parses correctly, and has
# no known security advisory, so it is ACCEPTED debt for now rather
# than a blocker. The exposure is contained: YAML parsing is used
# only by the Adapter Toolkit v2 DSL front-end (`adapter_toolkit`),
# never on the inference hot path, and the schema is a fixed, small
# set of structs. The JSON path (serde_json) is fully maintained
# and is a complete substitute — `AdapterDsl::from_str(.., false)`.
# TODO(adapter-toolkit): migrate to a maintained YAML crate (e.g.
# `serde_yml`, the maintained fork, or `serde_yaml_ng`) when one
# stabilises; the swap is isolated to the two `serde_yaml::` calls
# in `src/adapter_toolkit/dsl.rs`.
serde_yaml = "0.9"

# M4.9.c: serde is now mandatory rather than optional. The
# `atenia run --output json` path needs `#[derive(Serialize)]`
# on its report structs, and Mode A / B / C all share that
# path. ~150 KB binary-size impact, no transitive complexity.
# Was previously gated behind `hw-probe`; now always-on so
# default `cargo build --release --bin atenia` produces a
# binary with `run --output json` working.
serde = { version = "1", features = ["derive"] }

# M5.a — tokenizer + chat-template support for the public
# generation surface. Both crates are pure-Rust and preserve
# the M4.8 vendor-agnostic / no-C-toolchain posture (rejected
# `sentencepiece` here precisely because it links libsentencepiece
# via cc; see HANDOFF M5.a for the comparison table).
#
# `tokenizers` reads `tokenizer.json` byte-exactly with the
# Python `transformers` reference implementation, so the R1
# falsifier (encode 5 fixed prompts, diff IDs vs HF) holds
# across the five validated model families (Llama 2, Llama 3.2,
# Qwen 2.5, SmolLM2, TinyLlama). `default-features = false`
# strips `progressbar` (we already own the heartbeat surface)
# and `esaxx_fast` (C++ Unigram training; inference never needs
# it). `onig` stays on: it is the regex engine the `Split`
# pretokenizer in tokenizer.json files actually targets, and
# the alternative — `fancy-regex` via the `unstable_wasm`
# umbrella — also drags `getrandom/js` which doesn't build on
# x86_64-pc-windows-msvc. The M4.8 "vendor-agnostic" invariant
# was about matmul backends (no MKL), not about every C dep
# in the tree; `onig_sys` builds a small, stable C library
# once via `cc` and stays out of the matmul hot path.
#
# `minijinja` renders the Jinja2 `chat_template` field that
# every checkpoint ships in `tokenizer_config.json`. Generic
# rendering across all five model families means no per-family
# branching in M5.a (D65). Single dep, ~250 KB binary impact.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }
# `minijinja-contrib::pycompat` patches `Environment` so chat
# templates from HF that call Python string methods like
# `.strip()` / `.startswith()` / `.replace()` render correctly.
# Llama 2's chat_template hits `content.strip()` on the very
# first user message, which bare minijinja flags as unknown
# method. The contrib crate's `pycompat::unknown_method_callback`
# is a one-liner installation that mirrors the subset HF
# templates actually exercise.
minijinja-contrib = { version = "2", default-features = false, features = ["pycompat"] }

# CLI-6 — synchronous HTTP client for the `atenia download` command.
# `ureq` is the smallest mature Rust HTTP client that:
#   - is fully synchronous (no tokio runtime drag),
#   - uses pure-Rust rustls for TLS (no openssl-sys, preserves the
#     vendor-agnostic / no-C-toolchain posture for inference),
#   - builds out of the box on x86_64-pc-windows-msvc and
#     x86_64-unknown-linux-gnu in CI.
# Used only by `src/cli/download/*`; never on the inference hot path.
ureq = { version = "2", default-features = false, features = ["tls"] }

# Optional deps, only pulled in with `--features hw-probe`.
wgpu = { version = "22", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
os_info = { version = "3", optional = true }

# M4.9.a–.f — public single-binary CLI. Subcommands:
#   atenia probe       (requires --features hw-probe at compile)
#   atenia run         (the tri-mode killer-demo runner)
#   atenia explain     (legacy v13 self-trainer narrative)
# Default-build users get `atenia run`; pulling `--features
# hw-probe` adds the cross-vendor GPU enumerator. The probe
# arm is gated at runtime via `cfg!(feature = "hw-probe")`
# rather than `required-features` so the single binary stays
# installable from a default `cargo install --path .` even on
# hosts that cannot build wgpu.
#
# M4.9.f: the legacy `hardware_probe` binary was dropped; the
# `atenia probe` subcommand is now the canonical surface
# (parity verified bit-exact at M4.9.a).
[[bin]]
name = "atenia"
path = "src/bin/atenia.rs"

[dev-dependencies]
# (serde_json now lives in [dependencies], available transitively
# to integration tests as well — kept here as a no-op marker.)
